--- a/notebooks/myxcpp.ipynb
+++ b/notebooks/myxcpp.ipynb
@@ -711,6 +711,7 @@
    "source": [
     "#include <iostream>\n",
     "#include <vector>\n",
+    "/*",
     "using namespace std;\n",
     "int main()\n",
     "{\n",
@@ -722,7 +723,17 @@
     "    };\n",
     "    \n",
     "    \n",
-    "}\n"
+    "}\n",
+    "*/",
+    "\n",
+    "std::vector<std::vector<int>> v =\n",
+    "    {\n",
+    "        {1, 2, 3},\n",
+    "        {4, 5, 6},\n",
+    "        {7, 8, 9}\n",
+    "    };\n",
+    "\n",
+    "v\n"
    ]
   }
  ],
